make login page more similar to figma design
1. increased width of Form for desktop in login/signup page
2. added bottom borders to input forms per design
3. removed unnecessary empty divs in some js files
4. increased width of input fields to match card size

--- a/src/scss/pages/_addproperty.scss
+++ b/src/scss/pages/_addproperty.scss
@@ -41,6 +41,7 @@
 
 .form-field {
     border: none;
+    border-bottom: 1px solid $lightGray;
     color: $darkGray;
     font-weight: bold;
     &::placeholder {
