--- a/stashed/src/pages/login/Login.scss
+++ b/stashed/src/pages/login/Login.scss
@@ -41,7 +41,7 @@
         & .form-meta {
           display: flex;
           justify-content: center;
-          border: none;
+          // border: none;
         }
       }
     }
