--- a/src/scss/pages/_login.scss
+++ b/src/scss/pages/_login.scss
@@ -3,7 +3,7 @@
     // background: url("./assets/images/dwellingly_logo.png") no-repeat;
     background-size: contain;
     background-color: white;
-    width: 300px;
+    width: 400px;
     padding: 20px 30px;
     border-radius: 20px;
     box-shadow: 0 0 10px 0 rgba(black, 0.25);
@@ -22,16 +22,19 @@
   }
 
   &__form-field {
-    border: 0;
+    font-size: medium;
+    padding: 10px 10px 10px 0;
     border-bottom: 1px solid $lightGray;
-    padding: 10px 10px;
-    width: 250px;
+    width: 330px;
     margin: 0px;
     background-color: transparent;
   }
   &__logo {
     margin-top: 40px;
     margin-bottom: 40px;
+  }
+  &__button-section {
+    margin-top: 35px;
   }
   &__container {
     min-height: 100vh;
