--- a/src/scss/pages/_signup.scss
+++ b/src/scss/pages/_signup.scss
@@ -18,7 +18,7 @@
     // background: url("./assets/images/dwellingly_logo.png") no-repeat;
     background-size: contain;
     background-color: white;
-    width: 300px;
+    width: 400px;
     padding: 20px 30px;
     border-radius: 20px;
     box-shadow: 0 0 10px 0 rgba(black, 0.25);
@@ -39,14 +39,18 @@
   &__form-field {
     border: 0;
     border-bottom: 1px solid $lightGray;
-    padding: 10px 10px;
-    width: 250px;
+    padding: 10px 10px 10px 0;
+    width: 330px;
     margin: 0px;
     background-color: transparent;
   }
   &__logo {
     margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
+  }
+  &__button-section {
+    margin-top: 35px;
+    margin-bottom: 35px;
   }
   &__container {
     height: 100vh;
@@ -137,7 +141,7 @@
     }
     &__form-field{
       width: 100%;
-      border: none;
+      // border: none;
       padding: 7px 10px;
     }
     &__button{
