--- a/stashed/src/index.scss
+++ b/stashed/src/index.scss
@@ -46,7 +46,7 @@ fieldset {
 select,
 input {
   background: $color__white;
-  border: none;
+  // border: none;
   color: inherit;
   display: inline-block;
   font-family: inherit;
