--- a/src/scss/pages/_login.scss
+++ b/src/scss/pages/_login.scss
@@ -1,6 +1,13 @@
 .login {
+  /* Containers, Sections, Wrappers */
+  &__container {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: $gradient;
+  }
   &__form-container {
-    // background: url("./assets/images/dwellingly_logo.png") no-repeat;
     background-size: contain;
     background-color: white;
     width: 400px;
@@ -10,6 +17,39 @@
     margin: auto;
     text-align: center;
   }
+  &__or_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
+  &__account_container {
+    display: flex;
+    flex-direction: column;
+  }
+  &__form-field {
+    font-size: medium;
+    padding: 10px 10px 10px 0;
+    border-bottom: 1px solid $lightGray;
+    width: 330px;
+    margin: 0px;
+    background-color: transparent;
+  }
+  &__button-section {
+    margin-top: 35px;
+    margin-bottom: 35px;
+  }
+  &__or {
+    position: relative;
+    width: 50%;
+  }
+  &__privacyPolicyWrapper {
+    color: $blue;
+    font-size: 12px;
+    margin-top: 20px;
+  }
+
+  /* Components */
   &__button {
     color: white;
     background-color: $blue;
@@ -19,39 +59,6 @@
     border-width: 0px;
     padding: 10px 20px;
     font-weight: bold;
-  }
-
-  &__form-field {
-    font-size: medium;
-    padding: 10px 10px 10px 0;
-    border-bottom: 1px solid $lightGray;
-    width: 330px;
-    margin: 0px;
-    background-color: transparent;
-  }
-  &__logo {
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-  &__button-section {
-    margin-top: 35px;
-  }
-  &__container {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: $gradient;
-  }
-  &__or_container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-  }
-  &__or {
-    position: relative;
-    width: 50%;
   }
   &__divider {
     position: absolute;
@@ -63,6 +70,12 @@
     background-color: $lightGray;
     z-index: 1;
   }
+  &__logo {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  /* Text and link formatting */
   &__or_text {
     background-color: white;
     position: relative;
@@ -71,11 +84,6 @@
     font-weight: bold;
     color: $gray;
   }
-  &__account_container {
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-  }
   &__text_link {
     font-size: 14px;
   }
@@ -83,22 +91,31 @@
     margin-top: 10px;
     margin-bottom: 10px;
   }
+
+  /* Mobile styles on desktop */
+  &__mobile-header {
+    display: none;
+  }
+  &__mobile-heading {
+    display: none;
+  }
 }
-.googleIcon{
+
+.googleIcon {
   height: 20px;
   float: left;
 }
 
-@media (max-width: $breakpointMobile){
-
-  .login{
-    &__form-container{
-      width: 270px;
+/* Smaller screen styles */
+@media (max-width: $breakpointMobile) {
+  .login {
+    &__form-container {
+      width: 320px; // iPhone 5 width
     }
-    &__form-field{
-      width: 200px;
+    &__form-field {
+      width: 250px;
     }
-    &__button{
+    &__button {
       font-size: 12px;
     }
   }
