--- a/src/scss/pages/_login.scss
+++ b/src/scss/pages/_login.scss
@@ -39,7 +39,7 @@
     margin-top: 35px;
     margin-bottom: 35px;
   }
-  &__or {
+  &__or { // container for formmated "OR"
     position: relative;
     width: 50%;
   }
@@ -60,7 +60,7 @@
     padding: 10px 20px;
     font-weight: bold;
   }
-  &__divider {
+  &__divider { // used with the OR text
     position: absolute;
     top: 50%;
     width: 100%;
